--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # API Base URL
-# VITE_API_URL=https://image-keyword-app-backend-production.up.railway.app
-VITE_API_URL=http://localhost:3001
+VITE_API_URL=https://image-keyword-app-backend-production.up.railway.app
+# VITE_API_URL=http://localhost:3001
