--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.9.0",
     "localforage": "^1.10.0",
     "piexifjs": "^1.0.6",
     "react": "^19.1.1",
     "react-data-grid": "^7.0.0-beta.57",
     "react-dom": "^19.1.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.1",
     "styled-components": "^6.1.19"
   },
