--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "piexifjs": "^1.0.6",
     "react": "^19.1.1",
     "react-data-grid": "^7.0.0-beta.57",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.1",
