--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-data-grid": "^7.0.0-beta.57",
     "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
+    "react-native-get-random-values": "^1.11.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.1",
     "styled-components": "^6.1.19"
